--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <!--  -->
 
-<body style="background-color: rgb(216, 27, 169); font-family: 'Times New Roman', Times, serif;">
+<body style="background-color: rgb(216, 27, 169); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
     <!-- Etiqueta semantica HEADER: Guarda la cabecera de nuestra página-->
     <header style="background-color: blanchedalmond;">
         <h1>¡Hola, mundo!</h1>
@@ -16,34 +16,37 @@
     <!--Guarda el contenido principal de nuestra pagina-->
     <main>
         <h2>Esta es la bienvenida a un nuevo mundo de tecnología</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia quibusdam sapiente eius nobis dolorem alias dolore, unde fugit repudiandae placeat cum sequi minima harum cupiditate totam excepturi earum voluptatem. Magni.
-        Cupiditate quasi sequi molestias hic. Repellat distinctio eligendi impedit, magni, aut ea reprehenderit tempore molestias, doloribus eius esse totam doloremque accusamus harum deserunt necessitatibus explicabo ipsum error sint sapiente odio?
-        Harum iusto illo eum animi quis fugiat fugit maiores, voluptas, incidunt eius magni cum numquam, quod minus et debitis illum quam? Laudantium, facilis libero ratione iusto eius eaque deleniti necessitatibus?
-        Numquam deleniti dicta consectetur aspernatur at quaerat, optio esse accusamus ad tempora velit ducimus ratione dolore suscipit perferendis blanditiis eligendi illum? Perferendis tempore dolorem quae fugit libero iusto, eum ex.
-        Adipisci quam officia animi. Itaque autem sed incidunt neque illum animi deserunt quis. Molestiae provident laudantium reprehenderit. Odit ratione maiores a vitae nam praesentium non sunt. Culpa consectetur delectus consequatur!
-        Ducimus, atque amet! Dicta eum minima dolore unde qui temporibus at pariatur ea quasi autem fuga sint amet nemo cumque ducimus saepe consequuntur voluptatem impedit, voluptatibus voluptates? Eaque, excepturi aperiam.</p>
 
         <ol>
             <li><a href="#edna">edn</a></li>
             <li><a href="#baymax">Baymax</a></li>
-            <li><a href="../clonGoogle/index.html" target="_blank" rel="noopener noreferrer">Google</a></li>
-            <li><a href="../misegundoweb/index.html">Mi segunda web</a></li>
-            <li><a href="../miPortafolio/index.html">Mi portafolio web</a></li>
+            <li><a href="http://www.google.com/">Google dentro de la pagina</a></li>
+            <li><a href="http://www.google.com/" target="_blank" rel="noopener noreferrer">Google</a></li>
         </ol>
-
+        <h2>Baymax</h2>
         <img id="baymax" height="200"
             src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgQYlEU9Q6CWQR_0dEp8J4Wa0fRM2iTNfrm16lLjNYhqLG3zXHTElb3O7GxNcnjVWX9wVBfnvrr_cprFJpJMqKs1cCwqyKqtyJGxN7FExEWSIjt5CGng6ZEdZE1eQn51JiA5gWjf20BgWEibTTzNnAyuX4eBbV6Hxda2TvpO3RI9cJqZDZoiWuNlqraNA/s1000/Disney-BigHeroSix-Baymax.jpg"
             alt="Baymax">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi culpa consequatur, dicta dolores praesentium fuga magnam eum explicabo eaque voluptate cum, blanditiis optio corporis veritatis. Velit molestiae perspiciatis commodi mollitia.
-        Distinctio, amet quidem, assumenda reiciendis quo ipsam laboriosam excepturi facilis quam quos deleniti doloribus! Voluptates nihil iure voluptatem repellendus omnis nostrum aliquam quos et reiciendis? Recusandae nobis sunt nisi. Eius!
-        Corporis ad error neque ex? Pariatur animi porro cum consequatur voluptates ducimus cupiditate eum iure at? Doloremque, dolorum et, voluptatum distinctio ea officia quos sint dolor odit excepturi, commodi exercitationem!
-        Autem nostrum suscipit cupiditate, aliquam id odit repellendus mollitia. Magnam, quam! Aut fugit dolore ducimus similique consectetur, et natus debitis hic quisquam excepturi eveniet odio odit sit, repellat assumenda. Hic?
-        Quis harum dolorem laborum sed odio laboriosam consequatur nulla earum sapiente corporis, expedita dicta quia velit dolore ratione dignissimos nihil neque nam, saepe optio eius dolores similique magnam! Debitis, commodi?
-        Error, tempora quia. Corporis cum, molestiae animi ad nam ut velit quos aperiam numquam minus voluptatem quaerat facilis earum magnam beatae nostrum soluta odit laborum, magni recusandae debitis. Voluptatem, unde.</p>
+        <p style="font-family: Georgia, 'Times New Roman', Times, serif; text-align: center; color: bisque;">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, magni. Nisi distinctio cum eveniet voluptas, magni officiis animi minima sed perspiciatis cupiditate, rerum deleniti. Repudiandae expedita quia quos tempore doloribus?
+            Aperiam distinctio sunt cum placeat quis sit voluptatum dolorum amet voluptate eius facere voluptatem maxime aspernatur, eos in debitis ratione porro earum. Sunt tempore aperiam asperiores quisquam perspiciatis quis incidunt?
+            Molestiae cum minima voluptatem, quo suscipit, fugiat assumenda eum molestias vero cumque ut quidem quisquam? Suscipit odit architecto voluptatibus? Reiciendis voluptate rerum, quae quo voluptas tenetur labore nobis odio quis!
+            Incidunt sapiente iste veniam sunt distinctio illum pariatur, ab dicta, exercitationem soluta officiis natus nesciunt inventore reiciendis autem doloremque numquam tenetur harum quisquam velit assumenda, ipsum consequatur minima? Itaque, numquam.
+        </p>
+        <h2>Edna Modas</h2>
         <img id="edna" height="200" width="350" src="https://es.web.img2.acsta.net/newsv7/16/07/22/17/47/575454.jpg"
             alt="Edna-Modas">
-
+        <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum deserunt omnis, blanditiis quae unde ut iste perferendis consequatur, recusandae nulla animi illum. Totam doloremque amet molestias placeat nulla fugit unde.
+            Animi fuga harum illum porro nostrum est, dolore, provident blanditiis atque neque eligendi repellendus ipsa quam earum aperiam nesciunt adipisci ducimus doloribus recusandae. Quo sint praesentium sequi, ex labore rem!
+            Mollitia, eius provident! Assumenda soluta quam aliquid, quas quod blanditiis veritatis provident fuga nemo eligendi exercitationem culpa optio voluptatum incidunt earum labore nostrum fugiat adipisci! Nesciunt quidem mollitia cupiditate saepe.
+            Facere, tenetur unde eveniet quam corporis magnam! Architecto quisquam eaque repellat eius expedita, deserunt nesciunt odit accusamus mollitia corporis culpa nostrum quia tenetur fugit saepe eum. Distinctio repellat ducimus sapiente.
+        </p>
         <h3>Modelando</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptatum quibusdam est inventore voluptatem quod repellendus. Minima tenetur voluptatem officia distinctio fugiat magnam eveniet aliquam doloribus labore, velit corporis architecto.
+        </p>
+
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <em>Nisi</em>dicta ad temporibus modi similique aut incidunt eaque placeat doloribus repudiandae esse perspiciatis dolorum voluptatem earum rem, provident rerum ipsum sint.</p>
     </main>
     <!-- Etiqueta Footer: guarda el pie de pagina de nuestra pagina-->
