--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#edna">edn</a></li>
             <li><a href="#baymax">Baymax</a></li>
             <li><a href="http://www.google.com/">Google dentro de la pagina</a></li>
-            <li><a href="http://www.google.com/" target="_blank" rel="noopener noreferrer">Google</a></li>
+            <li><a href="https://lustrous-torrone-f3baba.netlify.app/" >Portafolio web</a></li>
         </ol>
         <h2>Baymax</h2>
         <img id="baymax" height="200"
@@ -42,6 +42,9 @@
             Mollitia, eius provident! Assumenda soluta quam aliquid, quas quod blanditiis veritatis provident fuga nemo eligendi exercitationem culpa optio voluptatum incidunt earum labore nostrum fugiat adipisci! Nesciunt quidem mollitia cupiditate saepe.
             Facere, tenetur unde eveniet quam corporis magnam! Architecto quisquam eaque repellat eius expedita, deserunt nesciunt odit accusamus mollitia corporis culpa nostrum quia tenetur fugit saepe eum. Distinctio repellat ducimus sapiente.
         </p>
+
+        <h2>Lilo y stich</h2>
+        <img id="Lilo"height="200" width="350" style="border-radius: 70%;" src="https://editorialtelevisa.brightspotcdn.com/dims4/default/96c1128/2147483647/strip/false/crop/900x600+0+0/resize/900x600!/quality/90/?url=https%3A%2F%2Fk2-prod-editorial-televisa.s3.us-east-1.amazonaws.com%2Fbrightspot%2Fwp-content%2Fuploads%2F2018%2F08%2Fmejores-caricaturas-de-disney-channel-1.jpg" alt="">
         <h3>Modelando</h3>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptatum quibusdam est inventore voluptatem quod repellendus. Minima tenetur voluptatem officia distinctio fugiat magnam eveniet aliquam doloribus labore, velit corporis architecto.
