--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <li><a href="#edna">edn</a></li>
             <li><a href="#baymax">Baymax</a></li>
             <li><a href="http://www.google.com/">Google dentro de la pagina</a></li>
+            <li><a href="miclongoogle-jatz.netlify.app">clonGoogle</a></li>
+            <li><a href="misegundowebjatz.netlify.app">Mi segunda web</a></li>
             <li><a href="https://lustrous-torrone-f3baba.netlify.app/" >Portafolio web</a></li>
         </ol>
         <h2>Baymax</h2>
