--- a/index.html
+++ b/index.html
@@ -11,53 +11,74 @@
 <body style="background-color: rgb(216, 27, 169); font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
     <!-- Etiqueta semantica HEADER: Guarda la cabecera de nuestra página-->
     <header style="background-color: blanchedalmond;">
-        <h1>¡Hola, mundo!</h1>
+        <h1><center>¡Hola, mundo!</center></h1>
     </header>
     <!--Guarda el contenido principal de nuestra pagina-->
     <main>
-        <h2>Esta es la bienvenida a un nuevo mundo de tecnología</h2>
-
         <ol>
-            <li><a href="#edna">edn</a></li>
-            <li><a href="#baymax">Baymax</a></li>
+            <li><a href="#rapunzel">Rapunzel</a></li>
+            <li><a href="#baymax">Grandes Heroes</a></li>
+            <li><a href="#merida">Valiente</a></li>
+            <li><a href="#raya">Raya y el ultimo Dragón</a></li>
             <li><a href="http://www.google.com/">Google dentro de la pagina</a></li>
             <li><a href="https://miclongoogle-jatz.netlify.app">clonGoogle</a></li>
             <li><a href="https://misegundowebjatz.netlify.app">Mi segunda web</a></li>
             <li><a href="https://lustrous-torrone-f3baba.netlify.app/" >Portafolio web</a></li>
         </ol>
-        <h2>Baymax</h2>
+        <h1> <center>Mis Películas Disney Favoritas</center></h1>
+        <center>
+            <img src="https://i.gifer.com/origin/61/61d3873bae33543cf9a5e56c1dd211e1_w200.gif" alt="" style="border-radius: 50%;" width="400">
+
+        </center>
+        <ul>
+            <li id="baymax" style="font-size: 30px;">Grandes Héroes</li>
+        </ul>
+        <center>
+            <img src="https://i.gifer.com/1B5Z.gif" alt="" height="200px">
         <img id="baymax" height="200"
             src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgQYlEU9Q6CWQR_0dEp8J4Wa0fRM2iTNfrm16lLjNYhqLG3zXHTElb3O7GxNcnjVWX9wVBfnvrr_cprFJpJMqKs1cCwqyKqtyJGxN7FExEWSIjt5CGng6ZEdZE1eQn51JiA5gWjf20BgWEibTTzNnAyuX4eBbV6Hxda2TvpO3RI9cJqZDZoiWuNlqraNA/s1000/Disney-BigHeroSix-Baymax.jpg"
             alt="Baymax">
-        <p style="font-family: Georgia, 'Times New Roman', Times, serif; text-align: center; color: bisque;">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia, magni. Nisi distinctio cum eveniet voluptas, magni officiis animi minima sed perspiciatis cupiditate, rerum deleniti. Repudiandae expedita quia quos tempore doloribus?
-            Aperiam distinctio sunt cum placeat quis sit voluptatum dolorum amet voluptate eius facere voluptatem maxime aspernatur, eos in debitis ratione porro earum. Sunt tempore aperiam asperiores quisquam perspiciatis quis incidunt?
-            Molestiae cum minima voluptatem, quo suscipit, fugiat assumenda eum molestias vero cumque ut quidem quisquam? Suscipit odit architecto voluptatibus? Reiciendis voluptate rerum, quae quo voluptas tenetur labore nobis odio quis!
-            Incidunt sapiente iste veniam sunt distinctio illum pariatur, ab dicta, exercitationem soluta officiis natus nesciunt inventore reiciendis autem doloremque numquam tenetur harum quisquam velit assumenda, ipsum consequatur minima? Itaque, numquam.
+        </center>
+        
+        <p style="font-family: Georgia, 'Times New Roman', Times, serif; color: bisque; font-size: 20px;">
+            Conoce a Baymax, un adorable compañero personal robot que forja un vínculo especial con el prodigio de la robótica Hiro Hamada. Cuando una serie de eventos devastadores los arroja al centro de un peligroso plan a desarrollarse en las calles de San Fransokyo, Hiro recurre a Baymax y a su grupo de amigos, y se transforman en una insólita banda de héroes.
         </p>
-        <h2>Edna Modas</h2>
-        <img id="edna" height="200" width="350" src="https://es.web.img2.acsta.net/newsv7/16/07/22/17/47/575454.jpg"
-            alt="Edna-Modas">
-        <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum deserunt omnis, blanditiis quae unde ut iste perferendis consequatur, recusandae nulla animi illum. Totam doloremque amet molestias placeat nulla fugit unde.
-            Animi fuga harum illum porro nostrum est, dolore, provident blanditiis atque neque eligendi repellendus ipsa quam earum aperiam nesciunt adipisci ducimus doloribus recusandae. Quo sint praesentium sequi, ex labore rem!
-            Mollitia, eius provident! Assumenda soluta quam aliquid, quas quod blanditiis veritatis provident fuga nemo eligendi exercitationem culpa optio voluptatum incidunt earum labore nostrum fugiat adipisci! Nesciunt quidem mollitia cupiditate saepe.
-            Facere, tenetur unde eveniet quam corporis magnam! Architecto quisquam eaque repellat eius expedita, deserunt nesciunt odit accusamus mollitia corporis culpa nostrum quia tenetur fugit saepe eum. Distinctio repellat ducimus sapiente.
+        <ul>
+            <li id="rapunzel" style="font-size: 30px;">Rapunzel</li>
+        </ul>
+        <center>
+            <img src="https://gifdb.com/images/featured/disney-princess-9vetp844ccg7tuul.gif" alt="gifrapunzel" height="200">
+            <img src="https://lumiere-a.akamaihd.net/v1/images/gallery_princess_rapunzel_2_a7f3c7a8_9fabd1e5.jpeg?region=3%2C0%2C2175%2C1223" alt="rapunzel" width="350">
+        </center>
+        <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 20px;">
+            Es la protagonista principal de la película del 2010 de Disney, Enredados. Ella es la princesa de Corona, conocida por su largo, magico y dorado cabello. Siendo una niña, Rapunzel fue raptada por Gothel y encerrada en una torre remota por dieciocho años, en los cuales quedó fascinada con un fénomeno relacionado con las "luces flotantes", las cuales sólo aparecían en su cumpleaños. Rapunzel se basa libremente en el protagonista del clásico cuento alemán Rapunzel de los hermanos Grimm. Es la décima oficial de las Princesa de Disney y la primera princesa animada por CGI.
         </p>
+        <ul>
+            <li id="rapunzel" style="font-size: 30px;">Rapunzel</li>
+        </ul>
+        <center>
+            <img src="https://uvn-brightspot.s3.amazonaws.com/assets/vixes/g/gif_valiente_disparando_flecha.gif" alt="gifrapunzel" height="200">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRGHu2rGDk94SnYHF2BNITqodMdu0QbI_kx2MSy_Go5A&s" alt="rapunzel" id="merida" width="400">
+        </center>
+        <p style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 20px;">
+            Mérida no es la típica princesa. Criada en el reino escocés de DunBroch, la princesa Mérida (a la que pone voz Kelly Macdonald) prefiere lanzar sus flechas a aprender la etiqueta propia de una futura reina. Cuando los otros tres clanes del reino llegan para presentar a los primogénitos de sus líderes como posibles pretendientes, Mérida se rebela contra su madre, la reina Elinor (Emma Thompson), y huye al bosque. Siguiendo una voluntad del viento, Mérida se encuentra con una bruja (Julie Walters) que conjura un pastel mágico para "cambiar a la reina". Pero cuando la reina come la golosina mágica, no es su mente la que cambia; ella (¡posible alerta de spoiler!) se transforma en un oso negro gigante, exactamente igual que el oso que le quitó la pierna al "Rey Oso" Fergus (Billy Connolly) una década antes. Con su madre convertida en osa y su padre a la caza, Mérida debe averiguar cómo romper el hechizo antes de que su madre se convierta en osa para siempre o, peor aún, de que el rey y sus hombres la maten.        <ul>
+            <li id="raya" style="font-size: 30px;">Raya y el Ultimo Dragón</li>
+        </ul>
+        <center>
+            <img src="https://pa1.aminoapps.com/7900/f1effa9393f14ce12c71eb191e92ccd04e949055r1-480-270_hq.gif" alt="" height="200px">
+        <img id="raya" height="200"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMIX0jHLXascRVw0wpRNkS3eeRTq3gzUchSwJxEIB3NQ&s"
+            alt="raya">
+        </center>
+        <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 20px;">La película nos transporta al mundo de fantasía de Kumandra, donde humanos y dragones vivieron juntos hace mucho tiempo en perfecta armonía. Pero cuando unas fuerzas del mal amenazaron el territorio, los dragones se sacrificaron para salvar a la humanidad. Ahora, 500 años después, esas mismas fuerzas malignas han regresado y Raya, una guerrera solitaria, tendrá que encontrar al último y legendario dragón para reconstruir un mundo destruido y volver a unir a su pueblo. Sin embargo, a lo largo de su aventura, comprenderá que se necesita algo más que la magia de un dragón para salvar al mundo: también necesitará confianza en sí misma y trabajo de equipo.</p>
 
-        <h2>Lilo y stich</h2>
-        <img id="Lilo"height="200" width="350" style="border-radius: 70%;" src="https://editorialtelevisa.brightspotcdn.com/dims4/default/96c1128/2147483647/strip/false/crop/900x600+0+0/resize/900x600!/quality/90/?url=https%3A%2F%2Fk2-prod-editorial-televisa.s3.us-east-1.amazonaws.com%2Fbrightspot%2Fwp-content%2Fuploads%2F2018%2F08%2Fmejores-caricaturas-de-disney-channel-1.jpg" alt="">
-        <h3>Modelando</h3>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptatum quibusdam est inventore voluptatem quod repellendus. Minima tenetur voluptatem officia distinctio fugiat magnam eveniet aliquam doloribus labore, velit corporis architecto.
-        </p>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <em>Nisi</em>dicta ad temporibus modi similique aut incidunt eaque placeat doloribus repudiandae esse perspiciatis dolorum voluptatem earum rem, provident rerum ipsum sint.</p>
+    
     </main>
     <!-- Etiqueta Footer: guarda el pie de pagina de nuestra pagina-->
     <footer>
         <a href="https://tecnolochicas.mx/" target="_blank">Tecnolochicas</a>
     </footer>
 </body>
+
 
 </html>
